tests/baselines/reference/typeParametersShouldNotBeEqual.errors.txt
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(4,5): error TS2323: Type 'U' is not assignable to type 'T'.
tests/cases/compiler/typeParametersShouldNotBeEqual.ts(5,5): error TS2323: Type 'Object' is not assignable to type 'T'.


==== tests/cases/compiler/typeParametersShouldNotBeEqual.ts (2 errors) ====
    function ff<T, U>(x: T, y: U) {
        var z: Object;
        x = x;  // Ok
        x = y;  // Error
        ~
!!! error TS2323: Type 'U' is not assignable to type 'T'.
        x = z;  // Error
        ~
!!! error TS2323: Type 'Object' is not assignable to type 'T'.
        z = x;  // Ok
    }
    